moved svg container in body for better display in mobile view, added margin to notification container to prevent overlap with the svg container

--- a/src/style.css
+++ b/src/style.css
@@ -503,15 +503,19 @@ button:active {
   order: 1;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 
 #game-status{
-  order: 1'
+  order: -1;
 }
 
 .game-status {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 0.8rem;
-  margin: 0px 0;
+  margin: 0 30px;
   padding: 10px;
 }
 
